[package]
name = "balachandran-copy-file"
version = "0.1.0"
edition = "2024"
authors = ['Balchandran']
description = "copy the file from one place to another place"
license = "MIT OR Apache-2.0"
keywords = ["cli", "copy", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
